# rotors_simulator

msl_rotors_description/: README.md
msl_rotors_description/urdf/: firefly_and_ball.xacro
msl_rotors_joy_interface/: CMakeLists.txt  README.md  package.xml
msl_rotors_joy_interface/src/: joy.cpp
msl_rotors_simulation/launch/: simulation.launch
msl_rotors_simulation/src/: waypoint_quad_control.cpp
